Fix spacing for footer icons

--- a/static/src/scss/_footer.scss
+++ b/static/src/scss/_footer.scss
@@ -12,6 +12,6 @@ footer.footer {
   }
 
   .content p {
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.5rem;
   }
 }
